# agentSchool

./: CMakeLists.txt  README.md  agentSchool.py  experience.cpp  experience.h  main.cpp
src/: agent.cpp  agent.h  predator.cpp  predator.h  tools.cpp  tools.h  types.cpp  types.h
